--- a/web/css/homeCss-Unused.css
+++ b/web/css/homeCss-Unused.css
@@ -1,21 +1,40 @@
 body{
     position: absolute;
-        left:0px; right: 0px;
+    left:0px; right: 0px;
         top:0px; bottom: 0px;
 	padding: 0px;
 	margin: 0px;
-        font-family: "Trebuchet MS", Helvetica, sans-serif;
+        /*background-image: url('http://www.easyvectors.com/assets/images/vectors/afbig/outline-smiley-icons-clip-art.jpg');*/
+        background-size: cover;
+        background-repeat: no-repeat;
 }
 a{
     text-decoration: none;
 }
 
+#accordion{
+    width: 100%;
+    margin: 0px;
+    margin-top: 60px;
+    margin-bottom: -150px;
+    height: 70%;
+    color: white;
+    text-shadow: 0px 1px 4px rgba(0, 0, 0, 1);
+    background-image: url('http://sourcefed.com/wp-content/uploads/2013/10/inception.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#accordion > .tile-area > h1{
+    font-size: 3em;
+    text-shadow: 0px 1px 4px rgba(0, 0, 0, 1);
+}
 .tile-area {
 	position:relative;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size:15px;
 	width: 100%;
-        top: 60px;
+        /*top: 65px;*/
 }
 .tile-area:after{
 	visibility: hidden;
@@ -41,6 +60,8 @@ a{
 	display: block;
 	content: '';
 }
+
+
 
 /* displaying five tiles per row... default */
 	/* setting the width of each tile type */
@@ -68,39 +89,44 @@ a{
 @media screen and (min-width: 800px) {
     
 	.tile-area {
-		width: 80%;
-		margin:0 10% 
+		width: 70%;
+		margin:0 auto; 
 	}
 
 	/* setting the width of each tile type */
 	.tile-area > .tile{width: 20%;}
 	.tile-area > .tile.double { width: 40%;}
-	.tile-area > .tile.quad { 
+	.tile-area > .tile.quad {
 		width: 40%;
 		float: right;
 	}
 
 	/* setting the height of each tile type relative to its width */
-	.tile-area > .tile:after {padding-top: 100%;}
+	.tile-area > .tile:after {padding-top: 65%;}
 	.tile-area > .tile.double:after {padding-top: 50%;}
 	.tile-area > .tile.quad:after {padding-top: 100%;}
 }
 
 
+
 /******************** tile-content ********************/
 .tile-area > .tile > .tile-content {
 	position: absolute;
-	left: 1px; right: 1px; top: 1px; bottom: 1px;
-        /*left: 0px; right: 0px; top: 0px; bottom: 0px;*/
-	/*border: 5px solid white;*/
+	/*left: 12px; right: 12px; top: 12px; bottom: 12px;*/
+        left: 2px; right: 2px; top: 2px; bottom: 2px;
+        left: 0px; right: 0px; top: 0px; bottom: 0px;
+	border: 1px solid white;
 	background-size:cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	margin: 0px;
+        overflow: hidden;
+        //border-radius: 25px;
 }
 .tile-area > .tile > .tile-content:hover{
 	border: 0px solid white;
-	margin: -4px;/*set the cell border*/
+	margin: 0px;/*set the cell border*/
+        z-index: 1000;
 }
 .tile-area > .tile > .tile-content{
 	-webkit-transition-duration:0.3s;
@@ -113,16 +139,15 @@ a{
 /********************* title *********************/
 .tile-area > .tile > .tile-content > .title{
 	position: absolute;
-	left:0px; right:0px; bottom: 0px;
+	left:0px; right:0px;top:35%;
 	color: white;
 	text-align:center;
 	overflow: hidden;
-	
-	height: 2.2em;
-	font-size:1em;
-	padding: .2em 2px;
-	background-color: rgba(0,0,0,0.7);
-	
+	height: 1.1em;
+	font-size:2em;
+	padding: 3% 2px;
+	background-color: rgba(0,0,0,0.0);
+        
     /* transition for various browsers  */
 	-webkit-transition-duration:0.2s;
            -moz-transition-duration:0.2s;
@@ -130,10 +155,19 @@ a{
              -o-transition-duration:0.2s;
                 transition-duration:0.2s;
 }
+.tile-area > .tile > .tile-content > .title > .moodDescription{
+    font-size: 0.5em;
+    line-height: 1em;
+}
+.tile-area > .tile > .tile-content:hover > .title > .moodDescription{
+    line-height: 1em;
+}
 .tile-area > .tile > .tile-content:hover > .title{
-	height: 4.5em;
+        top:0em;
+        /*height: auto;*/
+        height: 100%;
 	padding: .2em 6px;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgb(0,153,204);
 }
 
 /************************************CG ka metro wala kamal khatam************************************************************/
@@ -184,4 +218,33 @@ a{
     position: absolute;
     right: 0px;top: 0px;
     padding: 2px;
+}
+
+
+.hexagon {
+  position: relative;
+  width: 300px; 
+  height: 173.21px;
+  background-color: #64C7CC;
+  margin: 86.60px 0;
+}
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 150px solid transparent;
+  border-right: 150px solid transparent;
+}
+
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 86.60px solid #64C7CC;
+}
+
+.hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 86.60px solid #64C7CC;
 }
