--- a/web/css/homeCss.css
+++ b/web/css/homeCss.css
@@ -16,7 +16,6 @@ a{
     width: 100%;
     margin: 0px;
     margin-top: 60px;
-    margin-bottom: -150px;
     height: 60%;
     color: white;
     text-shadow: 0px 1px 4px rgba(0, 0, 0, 1);
@@ -43,10 +42,17 @@ a{
 .hidden{display: none;}
 
 #hexGrid{
-    position: absolute;
-    width: 60%;
-    margin: 0 18% 0 22%;
-    bottom: 1%;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+#hexGridWrapper{
+    position: relative;
+    width: 98%;
+    height: 45%;
+    margin: 0 auto;
+    padding: 0;
+    bottom: 0px;
 }
 
 .tile-area {
@@ -71,11 +77,25 @@ a{
 
 
 
-
+/*****for screen size lt 440px   ******/
 @media screen and (max-width: 440px) {
-
+    #hexGrid{
+        width: 98%;
+        margin: 0 auto;
+    } 
+    #hexGridWrapper{
+        width: 100%;
+        bottom: 50px;
+    }
 }
-@media screen and (min-width: 800px) {
+
+/*****for screen size gt 800px   ******/
+@media screen and (min-width: 800px) { 
+    #hexGridWrapper{
+        width: 60%;
+        margin: 0 auto;
+        bottom: 100px;
+    } 
 	.tile-area {
 		width: 80%;
 		margin:0 auto; 
