--- a/web/css/cg-metro.css
+++ b/web/css/cg-metro.css
@@ -158,21 +158,23 @@ a{
     position: fixed;
     top:0px;bottom: 0px;
     left: 0px; right:0px;
-    z-index: 4900;
+    z-index: 4950;
     background: rgba(0,0,0,0.3);
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 .modal{
     display: none;
     position: absolute;
-    left:14%; top:80px;
-    z-index: 4950;
-    width: 70%;
+    left:14%; right: 14%;
+    top:80px;
+    
+    //width: 70%;
     margin: 0px ;
     padding: 15px;
     text-align: justify;
     background: rgb(255,255,255);
+    overflow-x: hidden;
 }
 .modal > .bgImage{
     height: 200px;
@@ -185,4 +187,11 @@ a{
     position: absolute;
     right: 0px;top: 0px;
     padding: 2px;
+}
+@media screen and (max-width: 800px) {
+    .modal{
+        //width: 95%;
+        left:2%; right:2%;
+        margin: 0px;
+    }
 }
