--- a/web/css/navbar.css
+++ b/web/css/navbar.css
@@ -1,10 +1,11 @@
 .navbar {
-	position:absolute; 		/* uncomment to toggle fixed/scrollable nevbar */
+	position:absolute ; 		/* uncomment to toggle fixed/scrollable nevbar */
 	font-family: Arial, Helvetica, sans-serif;
 	font-size:15px;
 	left: 0px; top: 0px;
-	width:100%;
-	z-index: 5000;
+        right: 0px;
+	//width:100%;
+	z-index: 4000;
 	overflow-x: hidden;
 	overflow-y: hidden;
 	padding: 0px 0px;
